tests/idris2/coverage003/expected
1/1: Building Cover (Cover.idr)
Error: While processing left hand side of badBar. Can't match on 0 as it has a polymorphic type.

Cover.idr:16:1--16:7
    |
 16 | badBar Z = Z
    | ^^^^^^

Main> Main.foo: foo (0, S _)
foo (S _, _)
Main> Main.bar: bar _
Main> Main.cty: All cases covered
Main> Bye for now!
